<resources>
    <string name="app_name">ParkE</string>
    <string name="title_activity_maps">ParkE</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required.</string>
    <string name="settings">Settings</string>
    <string name="satellite">Satellite</string>
    <string name="pay">Pay</string>
    <string name="hours">Hours</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="track">Tracking Off</string>
    <string name="tracking">Tracking On</string>
    <string name="infobutton">infoButton</string>
    <string name="parkinginfo">parkingInfo</string>
    <string name="title_activity_side_bar">SideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
